Put feature flags to allow configuration
for specific environments at compile time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[features]
+default = ["top-left-uv", "right-hand-y-up", "ccw-winding"]
+top-left-uv = []
+bottom-left-uv = []
+right-hand-y-up = []
+left-hand-y-up = []
+cw-winding = []
+ccw-winding = []
